<resources>
    <string name="app_name">Bon Appetit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="already_registered">Already Registered?</string>
    <string name="Dont_have_acc">Not Having An Account?</string>
    <string name="bon_appetit">Bon Appetit</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="full_name">Full Name</string>
    <string name="discover_your_food_and_comforat_your_mood">Discover your food,and comforat your mood</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="sign_in">Sign In?</string>
    <string name="signin">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_add">E-mail Address</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="bonappetit_gmail_com">bonappetit@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="search_your_food">Search your Food!</string>
    <string name="hello_user">Hello User!</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product name</string>
    <string name="_5_0">5.0</string>
    <string name="min_15">Min - 15$</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="todo1">TODO</string>
    <string name="password">Password</string>
    <string name="todo2">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="min_150">Min - 150/-</string>
    <string name="go_back_to_login_screen">Go back to login screen</string>
    <string name="submit">Submit</string>
    <string name="order_now">Order Now</string>
    <string name="name">Name</string>
    <string name="recipe_here">Recipe here</string>
    <string name="incredents">Incredents</string>
    <string name="method">Method</string>

</resources>