<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dailymeal"
            android:icon="@drawable/ic_baseline_all_inclusive_24"
            android:title="@string/daily_meal" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_baseline_outdoor_grill_24"
            android:title="Recipes" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_cart" />
    </group>
</menu>