<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="20sp"
    tools:context=".activities.RegistrationActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="381dp"
        android:layout_height="225dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/bg_image" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="164dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeseva_one"
        android:gravity="center"
        android:text="@string/bon_appetit"
        android:textColor="#FF9800 "
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="241dp"
        android:layout_height="37dp"
        android:layout_marginTop="2dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/register_here"
        android:textColor="#EFA12D "
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="342dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#74534E4B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/password"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#74534E4B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="onClick"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/already_registered"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="login"
        android:text="@string/signin"
        android:textColor="@color/obrownlite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>